// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Block renders correctly with variant contained  1`] = `
.c0 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding: 5px 15px;
  box-sizing: border-box;
  border-radius: 5px;
  background: #13273f;
  color: #ffffff;
  border: none;
  cursor: pointer;
}

.c0:hover {
  background-color: #19385e;
  -webkit-filter: drop-shadow(0px 7px 20px rgba(108,108,138,0.6));
  filter: drop-shadow(0px 7px 20px rgba(108,108,138,0.6));
}

.c0:disabled {
  background: #dbe3eb;
  -webkit-filter: none;
  filter: none;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Submit
</button>
`;

exports[`Button Block renders correctly with variant contained disabled 1`] = `
.c0 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding: 5px 15px;
  box-sizing: border-box;
  border-radius: 5px;
  background-color: #ffffff;
  border: 1px solid #c2cedb;
  color: #13273f;
  cursor: pointer;
}

.c0:hover {
  box-sizing: border-box;
  border: 1px solid #13273f;
}

.c0:disabled {
  border: 1px solid #dbe3eb;
  box-sizing: border-box;
  color: #dbe3eb;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Submit
</button>
`;

exports[`Button Block renders correctly with variant outlined  1`] = `
.c0 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding: 5px 15px;
  box-sizing: border-box;
  border-radius: 5px;
  background-color: #ffffff;
  border: 1px solid #c2cedb;
  color: #13273f;
  cursor: pointer;
}

.c0:hover {
  box-sizing: border-box;
  border: 1px solid #13273f;
}

.c0:disabled {
  border: 1px solid #dbe3eb;
  box-sizing: border-box;
  color: #dbe3eb;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Submit
</button>
`;

exports[`Button Block renders correctly with variant outlined disabled 1`] = `
.c0 {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  padding: 5px 15px;
  box-sizing: border-box;
  border-radius: 5px;
  background-color: #ffffff;
  border: 1px solid #c2cedb;
  color: #13273f;
  cursor: pointer;
}

.c0:hover {
  box-sizing: border-box;
  border: 1px solid #13273f;
}

.c0:disabled {
  border: 1px solid #dbe3eb;
  box-sizing: border-box;
  color: #dbe3eb;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Submit
</button>
`;
